feat: [P4PU-540] removed transcation receipt (#145)
* removed transcation receipt

* removed transcation receipt

* RESTORED BizEventsReceiptNotFoundException
